--- a/config/storage.yml
+++ b/config/storage.yml
@@ -32,3 +32,26 @@ local:
 #   service: Mirror
 #   primary: local
 #   mirrors: [ amazon, google, microsoft ]
+
+google_dev:
+  service: GCS
+  project: docconnect-400809
+  credentials: <%= Rails.root.join('config/docconnect-400809-7d1c00d1fbc9.json') %>
+  bucket: docconnect-photos
+
+google:
+  service: GCS
+  project: docconnect-400809
+  credentials:
+    type: service_account
+    project_id: <%= Rails.application.credentials.dig(:gcs, :project_id) %>
+    private_key_id: <%= Rails.application.credentials.dig(:gcs, :private_key_id) %>
+    private_key: <%= Rails.application.credentials.dig(:gcs, :private_key).dump %>
+    client_email: <%= Rails.application.credentials.dig(:gcs, :client_email) %>
+    client_id: <%= Rails.application.credentials.dig(:gcs, :client_id) %>
+    auth_uri: https://accounts.google.com/o/oauth2/auth
+    token_uri: https://oauth2.googleapis.com/token
+    auth_provider_x509_cert_url: https://www.googleapis.com/oauth2/v1/certs
+    client_x509_cert_url: https://www.googleapis.com/robot/v1/metadata/x509/render-service%40docconnect-400809.iam.gserviceaccount.com
+    universe_domain: googleapis.com
+  bucket: docconnect-photos
